# ApolloTradingBot

./: .gitignore  ApolloTwitter.java  CMakeLists.txt  README.md  SomeAccounts.txt  praw.ini  praw.ini~  redditBot.py  update.txt
curlpp/: Form.hpp
docs/: index.html
lib/: CMakeLists.txt
resources/: 03-09-2018_06-36_ETH_Session.txt  ADA.json  Bitcoin.json  Bitcoin2.json  Bitcoin_Cash.json  ETH.json  ETN.json  Ethereum.json  KEY.json  Litecoin.json  ORME.json  PRL.json  SNOV.json  ZCL.json  fourchan.txt  reddit_token_data.txt  test_session.txt  text.json  tone_data.json  tone_data.txt  twitter.json  twitter.txt  twitter_comments.json  watsonTest.json
src/: BadResourceException.h  BadStatusException.h  BadTargetException.h  Bot.cpp  Bot.h  CMakeLists.txt  Comment.h  FourChan.cpp  FourChan.h  GDAXPrice.cpp  GDAXPrice.h  GDAXTestExchange.cpp  GDAXTestExchange.h  NotFoundException.h  OauthListener.h  OauthSession.h  PriceData.cpp  PriceData.h  PriceDataTarget.h  README.md  Reddit.cpp  Reddit.h  RedditOauth.cpp  RedditOauth.h  RequestParameter.h  ScraperTarget.h  SomeAccounts.txt  TestExchange.cpp  TestExchange.h  TimeoutException.h  TradeDialog.cpp  TradeDialog.h  TradingBot.cpp  TradingBot.h  TradingSession.cpp  TradingSession.h  Twitter.cpp  Twitter.h  api_key.cpp  api_key.h  (+31 more)
tests/: BotTest.cpp  FourChanTest.cpp  GDAXPriceTest.cpp  TwitterTest.cpp  watsonTest.cpp
watson/: .project  pom.xml  twitter.txt
watson/src/main/java/watsontest/watson/: App.java  GUI.java  ToneAnalyzerExample.java
watson/src/test/java/watsontest/watson/: AppTest.java
